--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "require-dev": {
     "codeclimate/php-test-reporter": "dev-master",
-    "mikey179/vfsStream": "^1.6",
+    "mikey179/vfsstream": "^1.6",
     "phpmd/phpmd": "@stable",
     "phpunit/phpunit": "^4.8 || ^5.0",
     "squizlabs/php_codesniffer": "~2.0"
